# video2mp3

./: .gitignore  DEBUGGING-GUIDE.md  DEMO_TUTORIAL.md  DEPLOYMENT.md  DOCUMENTATION-INDEX.md  LICENSE  QUICKSTART.md  README-COMPLETE.md  README.md  deploy.sh  pyproject.toml  run-demo.sh  setup-host.sh  start-services.sh  undeploy.sh
src/auth/: Dockerfile  README.md  init.sql  pyproject.toml  run-auth-test.sh  run-flask-auth-test.sh  run-flask-auth.sh  server.py  solution-auth-login.md
src/auth/manifests/: auth-deploy.yaml  configmap.yaml.template
src/converter/: Dockerfile  README.md  consumer.py  pyproject.toml
src/converter/convert/: to_mp3.py
src/converter/manifests/: configmap.yaml.template  converter-deploy.yaml
src/gateway/: Dockerfile  README.md  pyproject.toml  server.py
src/gateway/manifests/: configmap.yaml.template  gateway-deploy.yaml  ingress.yaml
src/gateway/storage/: util.py
src/notification/: Dockerfile  README.md  pyproject.toml
src/notification/manifests/: notification-deploy.yaml  secret.yaml.template
src/notification/send/: email.py
src/rabbitMQ/: README.md  solution tunnel.md
