[project]
name = "gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-pymongo>=3.0.1",
    "jedi>=0.19.2",
    "pika>=1.3.2",
    "pylint>=4.0.2",
    "pymongo>=4.15.3",
    "requests>=2.32.5",
]
